# biometric-attendance-sync-tool

./: api.py  attendance.py  erpnext_sync.py  error_handler.py  logger.py  main.py  pyproject.toml  utils.py
