[tool.poetry]
name = "biometric-attendance-sync-tool"
version = "0.1.0"
description = "A simple api that is used to interact with biometric devices."
authors = ["Nishant Bhickta <nishantbhickta@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pyzk = "^0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
